--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <button class="banner__button" type="button">Sign up</button>
         </div>
       </section>
+      <!-- Footer -->
       <footer class="footer">
         <p class="footer__text">Copyright &#169; The Odin Project 2021</p>
       </footer>
